<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth_frag.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/colorBalck"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorGrey1"
                android:text="@string/singupTopText"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/singupimage"
                android:src="@drawable/ic_access_account" />

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="3">

                    <com.hbb20.CountryCodePicker
                        android:background="@drawable/rounded_editetext"
                        android:layout_weight="1"
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="true"
                        app:ccp_showFullName="false"
                        app:ccp_showNameCode="false"

                        />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:autofillHints="@string/mobile"
                        android:id="@+id/ed_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:drawableStart="@drawable/ic_phone"
                        android:background="@drawable/rounded_editetext"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:padding="12dp"
                        android:textColor="@color/colorGrey2"
                        android:textColorHint="@color/colorGrey" />
                </LinearLayout>



                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey1"
                    android:layout_marginStart="8dp"
                    android:text="@string/by_signing_up_you_agree_to_our_terms_and_policy" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />



                <com.google.android.material.button.MaterialButton
                    android:elevation="10dp"
                    app:cornerRadius="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/singBtn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="@string/sign_up"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>